b2c/sfsc/src/objects/Address__c.object
<CustomObject>
    <description>This object holds contact address for customer registered on commerce cloud.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <description>Address Line 1</description>
        <inlineHelpText>Address Line 1</inlineHelpText>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <description>Address Line 2</description>
        <inlineHelpText>Address Line 2</inlineHelpText>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_3__c</fullName>
        <description>Address Line 3</description>
        <inlineHelpText>Address Line 3</inlineHelpText>
        <label>Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <inlineHelpText>City</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Commerce cloud address contact.</description>
        <inlineHelpText>Commerce cloud address contact.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>SCCAddresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country</description>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First Name</description>
        <inlineHelpText>First Name</inlineHelpText>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <description>Full Name</description>
        <inlineHelpText>Full Name</inlineHelpText>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last Name</description>
        <inlineHelpText>Last Name</inlineHelpText>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone</description>
        <inlineHelpText>Phone</inlineHelpText>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Box__c</fullName>
        <description>Post Box</description>
        <inlineHelpText>Post Box</inlineHelpText>
        <label>Post Box</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>Postal Code</description>
        <inlineHelpText>Postal Code</inlineHelpText>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Name__c</fullName>
        <description>Second Name</description>
        <inlineHelpText>Second Name</inlineHelpText>
        <label>Second Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State</description>
        <inlineHelpText>State</inlineHelpText>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>from_SFCC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Holds if this case is from Commerce Cloud or not</description>
        <inlineHelpText>Holds if this case is from Commerce Cloud or not</inlineHelpText>
        <label>from SFCC</label>
        <type>Checkbox</type>
    </fields>
    <label>Address</label>
    <nameField>
        <label>Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>